<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_show"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_show"/>

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_find"/>
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shop"/>
    <item
        android:id="@+id/navigation_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_me"/>

</menu>
